--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title> </title>
 	<meta charset="utf-8" />
 
-	<!-- <meta name="viewport" content="initial-scale=1" /> -->
+	<meta name="viewport" content="initial-scale=1" />
 	<link rel="stylesheet" type="text/css"  href="css/normalize.css">
 	<link rel="stylesheet" type="text/css"  href="css/fullscreen.css">
 	<link rel="stylesheet" type="text/css"  href="css/style.css">
