--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
 	<meta charset="utf-8" />
 
 	<meta name="viewport" content="initial-scale=1" />
+	
 	<link rel="stylesheet" type="text/css"  href="css/normalize.css">
 	<link rel="stylesheet" type="text/css"  href="css/fullscreen.css">
-	<link rel="stylesheet" type="text/css"  href="css/style.css">
-
-
 	<link rel="stylesheet" type="text/css"  href="css/style.css">
 
 	<!-- web fonts -->
@@ -50,8 +48,9 @@
 				</div><!-- .column-left -->
 
 				<div class="column">
-
-					<section class="todos"></section>
+					<div class="button button-print" onclick="printList()">Print!</div>
+					<section class="todos">
+					</section>
 
 					<!-- <section class="done"></section> -->
 				</div><!-- .column-right -->
